--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta property="og:url" content="https://www.VpsIndonesia.web.id" />
         <meta property="og:title" content="VpsIndonesia | Managed Cloud VPS Indonesia murah 150.000/bulan | SLA 99,5%" />
         <meta property="og:description" content="VpsIndonesia menyediakan layanan Managed Cloud Hosting berupa Cloud VPS Indonesia dengan harga murah, performa terkencang dan kualitas premium." />
-	<meta name="kredibel-verification" value="OAFBZR">
+	<meta name="kredibel-verification" value="KZ47H2">
 	<link rel="canonical" href="https://vpsindonesia.web.id">
 
         <link rel="stylesheet" href="assets/css/aos.css">
