--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         
         <meta property="og:image" content="https://static.vpsindonesia.web.id/q/cloudlogo.png" />
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://www.VpsIndonesia.web.id" />
+        <meta property="og:url" content="https://www.VpsIndonesia.id" />
         <meta property="og:title" content="VpsIndonesia | Managed Cloud VPS Indonesia murah 150.000/bulan | SLA 99,5%" />
         <meta property="og:description" content="VpsIndonesia menyediakan layanan Managed Cloud Hosting berupa Cloud VPS Indonesia dengan harga murah, performa terkencang dan kualitas premium." />
 	<meta name="kredibel-verification" value="KZ47H2">
-	<link rel="canonical" href="https://vpsindonesia.web.id">
+	<link rel="canonical" href="https://vpsindonesia.id">
 
         <link rel="stylesheet" href="assets/css/aos.css">
         <link rel="stylesheet" href="assets/css/animate.css">
@@ -72,7 +72,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
                             <small>Performa Terkencang</small>
                             <h1>CLOUD VPS INDONESIA</h1>
                             <p>High Availablilty Server <b>SLA 99,5%</b> untuk meningkatkan bisnis dan trafik website kamu</p>
-                            <a href="https://client.vpsindonesia.web.id/cart.php?a=add&pid=1" class="btn_coa">Beli Sekarang !</a>
+                            <a href="https://client.vpsindonesia.id/cart.php?a=add&pid=1" class="btn_coa">Beli Sekarang !</a>
                             <a href="/cloud-vps-indonesia" class="banner_btn">Lihat Detail</a>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 order01 home_banner_img_box"></div>
@@ -100,7 +100,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
                     <p>dapatkan nama domain dari VpsIndonesia</p>
                 </div>
                 <div class="outer_search_filed" data-aos="fade-up">
-                    <form action="https://Client.VpsIndonesia.web.id/cart.php?a=add&domain=register" method="post">
+                    <form action="https://Client.VpsIndonesia.id/cart.php?a=add&domain=register" method="post">
                         <input type="text" name="query" class="search_domain_field" placeholder="Enter Your Domain Name:" />
                         <input type="submit" value="Search" class="search_domain_btn" />
                     </form>
@@ -113,16 +113,16 @@ hs.src = ('//s10.histats.com/js15_as.js');
      <div class="domain_list_outer">
          <div class="container">
              <ul class="domain_tlds_list">
-                 <li><figure><img src="assets/images/domain_img01.png" alt="domain com"></figure> <span><script language="javascript" src="https://Client.VpsIndonesia.web.id/feeds/domainprice.php?tld=.com&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/domain_img02.png" alt="domain net"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.net&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/domain_img03.png" alt="domain org"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.org&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/domain_img04.png" alt="domain biz"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.biz&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/domain_img05.png" alt="domain info"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.info&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/domain_img06.png" alt="domain top"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.top&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/domain_img07.png" alt="domain xyz"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.xyz&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/id.png" alt="domain id"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.id&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/coid.png" alt="domain co.id"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.co.id&type=register&regperiod=1&format=1"></script></span></li>
-                 <li><figure><img src="assets/images/my-id.png" alt="domain my.id"></figure> <span><script language="javascript" src="https://client.vpsindonesia.web.id/feeds/domainprice.php?tld=.my.id&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/domain_img01.png" alt="domain com"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.com&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/domain_img02.png" alt="domain net"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.net&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/domain_img03.png" alt="domain org"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.org&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/domain_img04.png" alt="domain biz"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.biz&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/domain_img05.png" alt="domain info"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.info&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/domain_img06.png" alt="domain top"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.top&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/domain_img07.png" alt="domain xyz"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.xyz&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/id.png" alt="domain id"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.id&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/coid.png" alt="domain co.id"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.co.id&type=register&regperiod=1&format=1"></script></span></li>
+                 <li><figure><img src="assets/images/my-id.png" alt="domain my.id"></figure> <span><script language="javascript" src="https://client.vpsindonesia.id/feeds/domainprice.php?tld=.my.id&type=register&regperiod=1&format=1"></script></span></li>
              </ul>
          </div>
      </div>
@@ -149,7 +149,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
                             <li>1 Core, 2GB RAM</li>
                             <li>Unlimited Bandwidth /Bulan</li>
                         </ul>
-                        <a href="https://client.vpsindonesia.web.id/cart.php?a=add&pid=1" class="hosting_plan_box_btn">Order Now</a>
+                        <a href="https://client.vpsindonesia.id/cart.php?a=add&pid=1" class="hosting_plan_box_btn">Order Now</a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
@@ -164,7 +164,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
                             <li>Unlimited Bandwidth / Bulan</li>
                             <li>license cPanel Unlimited Gratis (Open Ticket)</li>
                         </ul>
-                        <a href="https://client.vpsindonesia.web.id/cart.php?a=add&pid=3" class="hosting_plan_box_btn">Order Now</a>
+                        <a href="https://client.vpsindonesia.id/cart.php?a=add&pid=3" class="hosting_plan_box_btn">Order Now</a>
                     </div>
                 </div>
             </div>
